--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -34,14 +34,23 @@ body {
     width: 132.864px;
     height: 17.376px;
     flex-shrink: 0;
+    margin-top: 26px;
+    margin-left: 124px;
 }
 
 .Header-Menu {
-    height: 72px;
+    width: 350px;
+    height: 46px;
     flex-shrink: 0;
+    margin-top: 25px;
 }
 
 .Primary-button {
+    width: 142px;
+    height: 18px;
+    margin-top: 15px;
+    margin-right: 123px;
+
     display: inline-flex;
     padding: 10px 24px;
     justify-content: center;
@@ -53,7 +62,7 @@ body {
 
 .Hero-section {
     width: 100%;
-    height: 678px;
+    height: 606px;
     flex-shrink: 0;
 
     background: var(--Primary-Colors-brand-green-light);
@@ -67,15 +76,30 @@ body {
 }
 
 .Hero-div-text {
+    width: 605px;
+    height: 335px;
+    flex-shrink: 0;
+    margin-top: 80px;
+    margin-left: 80px;
+
     grid-area: div-text;
 }
 
 .Hero-img {
+    width: 401px;
+    height: 547px;
+    margin-right: 100px;
+
     grid-area: img;
 }
 
 .div-numbers {
+    width: 1120px;
+    height: 210px;
+    margin-top: -50px;
+
     grid-area: div-number;
+    justify-self: center;
 }
 
 /* Services section from here ------------------------------------------ */
@@ -86,6 +110,34 @@ body {
     flex-shrink: 0;
 
     background: var(--Primary-Colors-brand-green-light-02);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.section-heat-text {
+    width: 76px;
+    height: 21px;
+    margin-top: 263px;
+
+    align-self: center;
+}
+
+.section-title {
+    width: 497px;
+    height: 104px;
+    margin-top: 16px;
+
+    align-self: center;
+}
+
+.div-cards-services {
+    width: 1121px;
+    height: 454px;
+    margin-top: 64px;
+
+    align-self: center;
 }
 
 /* About section from here --------------------------------------------- */
@@ -95,8 +147,24 @@ body {
     height: 734px;
 
     background: var(--Primary-Colors-brand-beige);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.about-img {
+    width: 480px;
+    height: 414px;
+    margin-left: 9%;
+}
+
+.about-div-text {
+    width: 537px;
+    height: 327px;
+    margin-right: 9%;
+}
 /* Contact section from here ------------------------------------------- */
 
 .Contact-section {
@@ -104,6 +172,23 @@ body {
     height: 699px;
 
     background: var(--Secondary-Colors-White);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-div {
+    width: 404px;
+    height: 304px;
+    margin-left: 9%;
+}
+
+.contact-img {
+    width: 575px;
+    height: 379px;
+    margin-right: 9%;
 }
 
 /* Footer from here ---------------------------------------------------- */
@@ -113,6 +198,23 @@ footer {
     height: 268px;
 
     background: var(--Primary-Colors-brand-green);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-div-info {
+    width: 256px;
+    height: 108px;
+    margin-left: 9%;
+}
+
+.div-social-media {
+    width: 136px;
+    height: 24px;
+    margin-right: 9%;
 }
 
 /* Mobile adaptation from here ----------------------------------------- */
