--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -9,6 +9,7 @@
 html,
 body {
     width: 100vw;
+    height: 100vh;
     max-width: 1366px;
     margin: 0;
 }
@@ -21,8 +22,6 @@ body {
 
 .Header-Desktop {
     width: 100%;
-    height: 72px;
-
     background: var(--Primary-Colors-brand-green-light);
 
     display: flex;
@@ -58,6 +57,15 @@ body {
     gap: 16px;
 }
 
+picture {
+    display: none;
+}
+
+.Mobile-Menu {
+    width: 40px;
+    height: 40px;
+}
+
 /* Hero section from here -------------------------------------- */
 
 .Hero-section {
@@ -74,6 +82,7 @@ body {
     ;
 
 }
+
 
 .Hero-div-text {
     width: 605px;
@@ -165,6 +174,7 @@ body {
     height: 327px;
     margin-right: 9%;
 }
+
 /* Contact section from here ------------------------------------------- */
 
 .Contact-section {
@@ -218,3 +228,37 @@ footer {
 }
 
 /* Mobile adaptation from here ----------------------------------------- */
+
+@media screen and (min-width:481px) and (max-width: 960px) {
+
+    /* Mobile Header section from here -----------------------------*/
+    .Header-Menu {
+        display: none;
+    }
+
+    .Primary-button {
+        display: none;
+    }
+
+    picture {
+        display: block;
+    }
+
+    /* Mobile Hero section from here -----------------------------*/
+
+    .Hero-section {
+        grid-template-areas:
+            "div-text"
+            "img"
+            "div-number";
+    }
+
+    /* .Hero-div-text {
+    }
+
+    .Hero-img {
+    }
+
+    .div-numbers {
+    } */
+}
