--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -70,7 +70,6 @@ picture {
 
 .Hero-section {
     width: 100%;
-    height: 606px;
     flex-shrink: 0;
 
     background: var(--Primary-Colors-brand-green-light);
@@ -105,7 +104,8 @@ picture {
 .div-numbers {
     width: 1120px;
     height: 210px;
-    margin-top: -50px;
+    margin-top: -4%;
+    margin-bottom: -8%;
 
     grid-area: div-number;
     justify-self: center;
@@ -115,7 +115,6 @@ picture {
 
 .Services-section {
     width: 100%;
-    height: 1082px;
     flex-shrink: 0;
 
     background: var(--Primary-Colors-brand-green-light-02);
@@ -145,6 +144,7 @@ picture {
     width: 1121px;
     height: 454px;
     margin-top: 64px;
+    margin-bottom: 8%;
 
     align-self: center;
 }
@@ -153,7 +153,6 @@ picture {
 
 .About-section {
     width: 100%;
-    height: 734px;
 
     background: var(--Primary-Colors-brand-beige);
 
@@ -167,6 +166,8 @@ picture {
     width: 480px;
     height: 414px;
     margin-left: 9%;
+    margin-top: 8%;
+    margin-bottom: 8%;
 }
 
 .about-div-text {
@@ -179,7 +180,6 @@ picture {
 
 .Contact-section {
     width: 100%;
-    height: 699px;
 
     background: var(--Secondary-Colors-White);
 
@@ -199,13 +199,14 @@ picture {
     width: 575px;
     height: 379px;
     margin-right: 9%;
+    margin-top: 8%;
+    margin-bottom: 8%;
 }
 
 /* Footer from here ---------------------------------------------------- */
 
 footer {
     width: 100%;
-    height: 268px;
 
     background: var(--Primary-Colors-brand-green);
 
@@ -219,6 +220,8 @@ footer {
     width: 256px;
     height: 108px;
     margin-left: 9%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .div-social-media {
