--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -34,7 +34,7 @@ body {
     height: 17.376px;
     flex-shrink: 0;
     margin-top: 26px;
-    margin-left: 124px;
+    margin-left: 6%;
 }
 
 .Header-Menu {
@@ -232,7 +232,7 @@ footer {
 
 /* Tablet adaptation from here ----------------------------------------- */
 
-@media screen and (min-width:481px) and (max-width: 960px) {
+@media screen and (max-width: 960px) {
 
     /* Header section - Mobile from here -----------------------------*/
     .Header-Menu {
@@ -245,27 +245,51 @@ footer {
 
     picture {
         display: block;
+        margin-right: 5%;
+    }
+
+    .Header-Desktop {
+
+        align-items: center;
+    }
+
+    .Web-title {
+        margin-left: 5%;
     }
 
     /* Hero section - Mobile from here -----------------------------*/
 
     .Hero-section {
-        grid-template-areas:
-            "div-text"
-            "img"
-            "div-number";
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
-    /* .Hero-div-text {
+    .Hero-div-text {
+        width: 60%;
+        margin-top: 3%;
+        margin-left: 0;
     }
 
     .Hero-img {
+        margin-top: 7%;
+        margin-right: 0;
     }
 
     .div-numbers {
-    } */
+        width: 90%;
+        margin-bottom: -17%;
+    }
 
     /* Services section - Mobile from here ------------------------- */
+    .Services-section {
+        align-items: center;
+    }
+
+    .div-cards-services {
+        width: 90%;
+    }
 
     /* About section - Mobile from here ---------------------------- */
 
@@ -274,25 +298,46 @@ footer {
     }
 
     .about-div-text {
+        margin-right: 0;
         margin-bottom: 9%;
+
     }
 
+    .about-img {
+        margin-left: 0;
+    }
     /* Contact section - Mobile from here -------------------------- */
+
+
 
     .Contact-section {
         flex-direction: column;
     }
 
     .contact-div {
+        margin-left: 0;
         margin-top: 9%;
     }
 
+    .contact-img {
+        margin-right: 0;
+    }
     /* Footer - Mobile from here ----------------------------------- */
 
     footer {
         flex-direction: column;
+        align-items: start;
     }
 
+    .footer-div-info {
+        margin-top: 7%;
+        margin-left: 5%;
+    }
+
+    .div-social-media {
+        margin-left: 5%;
+        margin-bottom: 7%;
+    }
 }
 
 /* Mobile adaptation from here ----------------------------------------- */
