--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -273,6 +273,7 @@ footer {
     }
 
     .Hero-img {
+        width: 70%;
         margin-top: 7%;
         margin-right: 0;
     }
@@ -287,6 +288,14 @@ footer {
         align-items: center;
     }
 
+    .section-heat-text {
+        width: 12%;
+    }
+
+    .section-title {
+        width: 87%;
+    }
+
     .div-cards-services {
         width: 90%;
     }
@@ -297,29 +306,33 @@ footer {
         flex-direction: column;
     }
 
+    .about-img {
+        width: 90%;
+        margin-left: 0;
+    }
+
     .about-div-text {
+        width: 90%;
         margin-right: 0;
         margin-bottom: 9%;
 
     }
 
-    .about-img {
-        margin-left: 0;
-    }
+
     /* Contact section - Mobile from here -------------------------- */
-
-
 
     .Contact-section {
         flex-direction: column;
     }
 
     .contact-div {
+        width: 90%;
         margin-left: 0;
         margin-top: 9%;
     }
 
     .contact-img {
+        width: 90%;
         margin-right: 0;
     }
     /* Footer - Mobile from here ----------------------------------- */
