--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -150,9 +150,9 @@ picture {
 }
 
 .div-cards-services {
-    width: 1121px;
+    width: 90%;
     height: 454px;
-    margin-top: 64px;
+    margin-top: 9%;
     margin-bottom: 8%;
 
     align-self: center;
@@ -172,7 +172,7 @@ picture {
 }
 
 .about-img {
-    width: 480px;
+    width: 32%;
     height: 414px;
     margin-left: 9%;
     margin-top: 8%;
@@ -180,7 +180,7 @@ picture {
 }
 
 .about-div-text {
-    width: 537px;
+    width: 45%;
     height: 327px;
     margin-right: 9%;
 }
@@ -199,13 +199,13 @@ picture {
 }
 
 .contact-div {
-    width: 404px;
+    width: 25%;
     height: 304px;
     margin-left: 9%;
 }
 
 .contact-img {
-    width: 575px;
+    width: 45%;
     height: 379px;
     margin-right: 9%;
     margin-top: 8%;
@@ -284,7 +284,7 @@ footer {
     .Hero-img {
         width: 70%;
         margin-top: 7%;
-        margin-right: 0;
+        margin-left: 0;
     }
 
     .div-numbers {
@@ -313,6 +313,7 @@ footer {
 
     .About-section {
         flex-direction: column;
+        justify-content: space-around;
     }
 
     .about-img {
@@ -332,6 +333,7 @@ footer {
 
     .Contact-section {
         flex-direction: column;
+        justify-content: space-around;
     }
 
     .contact-div {
@@ -344,6 +346,7 @@ footer {
         width: 90%;
         margin-right: 0;
     }
+
     /* Footer - Mobile from here ----------------------------------- */
 
     footer {
