--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -67,7 +67,7 @@ body {
     gap: 16px;
 }
 
-picture {
+.header-picture {
     display: none;
 }
 
@@ -103,10 +103,9 @@ picture {
     grid-area: div-text;
 }
 
-.Hero-img {
-    width: 90%;
-    height: 547px;
-    margin-left: -30%;
+picture .Hero-img {
+    max-height: 547px;
+    margin-left: 60%;
     grid-area: img;
 }
 
@@ -252,7 +251,7 @@ footer {
         display: none;
     }
 
-    picture {
+    .header-picture {
         display: block;
         margin-right: 5%;
     }
@@ -281,11 +280,11 @@ footer {
         margin-left: 0;
     }
 
-    .Hero-img {
-        width: 70%;
+    picture .Hero-img {
+        max-height: 340px;
         margin-top: 7%;
         margin-left: 0;
-    }
+     }
 
     .div-numbers {
         width: 90%;
